# Sleipnir

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  travisBuildScript.sh
SleipnirEngine/: CMakeLists.txt  SleipnirEngineConfig.cmake.in
SleipnirEngine/cmake/: SleipnirBuildFlags.cmake  SleipnirInstallInfo.cmake
SleipnirEngine/ecs/: CMakeLists.txt
SleipnirEngine/ecs/include/sleipnir/ecs/: Systems.hpp  Types.hpp  WorldTime.hpp
SleipnirEngine/ecs/include/sleipnir/ecs/component/: ControlComponent.hpp  DummyComponent.hpp  Flags.hpp  Flags.imp  LifetimeComponent.hpp  PhysicsComponent.hpp  PositionComponent.hpp  RenderComponent.hpp  TimerComponent.hpp
SleipnirEngine/ecs/include/sleipnir/ecs/entity/: Entity.hpp  Entity.imp  EntityPool.hpp  World.hpp
SleipnirEngine/ecs/include/sleipnir/ecs/system/: ISystem.hpp  Lifetime.hpp  Render.hpp  Skeleton.hpp  Skeleton.imp  Time.hpp  TimeBase.hpp  TimeWithPhysics.hpp  Timer.hpp
SleipnirEngine/ecs/include/sleipnir/ecs/system/physics/: Body.hpp  BodyController.hpp  BodyHandle.hpp  DynamicForceController.hpp  Engine.hpp  PegasusAdapter.hpp  PegasusPrimitives.hpp  Physics.hpp  PhysicsThread.hpp  Primitives.hpp  SpawnInfo.hpp
SleipnirEngine/ecs/include/sleipnir/ecs/system/physics/adapter/pegasus/: Body.hpp  BodyHandle.hpp  Engine.hpp
SleipnirEngine/ecs/source/: Systems.cpp
SleipnirEngine/ecs/source/entity/: Entity.cpp  EntityPool.cpp  World.cpp
SleipnirEngine/ecs/source/system/: Lifetime.cpp  Render.cpp  Time.cpp  TimeBase.cpp  TimeWithPhysics.cpp  Timer.cpp
SleipnirEngine/ecs/source/system/physics/: BodyController.cpp  DynamicForceController.cpp  PegasusAdapter.cpp  PegasusBody.cpp  PegasusPrimitives.cpp  Physics.cpp  PhysicsThread.cpp
SleipnirEngine/ecs/source/system/physics/adapter/pegasus/: Body.cpp  Engine.cpp
SleipnirEngine/include/sleipnir/: InternalLoggers.hpp  Loggers.hpp  SleipnirConfigurator.hpp  SleipnirEngine.hpp  Systems.hpp  WorldTime.hpp
SleipnirEngine/include/sleipnir/component/: ControlComponent.hpp  DummyComponent.hpp  Flags.hpp  Flags.imp  LifetimeComponent.hpp  PhysicsComponent.hpp  PositionComponent.hpp  RenderComponent.hpp  TimerComponent.hpp
SleipnirEngine/include/sleipnir/entity/: Entity.hpp  Entity.imp  EntityPool.hpp  World.hpp
SleipnirEngine/include/sleipnir/system/: ISystem.hpp  Lifetime.hpp  Render.hpp  Skeleton.hpp  Skeleton.imp  Time.hpp  Timer.hpp
SleipnirEngine/include/sleipnir/system/physics/: BodyController.hpp  BodyHandle.hpp  DynamicForceController.hpp  PegasusAdapter.hpp  Physics.hpp  PhysicsThread.hpp  SpawnInfo.hpp
SleipnirEngine/include/sleipnir/utility/: Config.hpp  QSBR.hpp  TemplateCounter.hpp  Types.hpp
SleipnirEngine/source/: Loggers.cpp  SleipnirEngine.cpp  Systems.cpp
SleipnirEngine/source/entity/: Entity.cpp  EntityPool.cpp  World.cpp
SleipnirEngine/source/system/: Lifetime.cpp  Render.cpp  Time.cpp  Timer.cpp
SleipnirEngine/source/system/physics/: BodyController.cpp  DynamicForceController.cpp  PegasusAdapter.cpp  Physics.cpp  PhysicsThread.cpp
SleipnirEngine/source/utility/: QSBR.cpp
SleipnirEngine/tests/: CMakeLists.txt
SleipnirEngine/tests/utility/: TemplateCounterTest.cpp
SleipnirEngine/tests/utility/cc/: ChangesTest.cpp  ccTestUtils.cpp  ccTestUtils.hpp  ccTestUtilsTest.cpp
SleipnirEngine/utility/: CMakeLists.txt
SleipnirEngine/utility/include/sleipnir/utility/: InternalLoggers.hpp  QSBR.hpp
SleipnirEngine/utility/include/sleipnir/utility/cc/: Changes.hpp  Changes.imp
cmake/: FindArion.cmake  FindEpona.cmake  FindMule.cmake  NSIS.InstallOptions.ini.in  NSIS.definitions.nsh.in  NSIS.template.in  SleipnirEngineConfig.cmake  version.in
example/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
